--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <aside class="side">
       <figure id="picture" class="picture">
         <div class="picture-shadow"></div>
-        <img id="pictureImage" class="picture-image" data-image="images/pujan.jpg.jpg" src="images/pujan.jpg" alt="Portrait of Pujan Bajracharya"
+        <img id="pictureImage" class="picture-image" data-image="images/pujan.jpg" src="images/pujan.jpg" alt="Portrait of Pujan Bajracharya"
           width="320" height="320">
       </figure>
     </aside>
@@ -29,7 +29,7 @@
         Hi, I'm Pujan Ratna Bajracharya
       </h1>
       <p class="job">
-       Dot Net Developer
+       Developing .Net Core Applications, Learning Vue.Js/Angular 
       </p>
       <hr class="hr">
       <div class="description">
