changed bg image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         Hi, I'm Pujan Ratna Bajracharya
       </h1>
       <p class="job">
-       Developing .Net Core Applications, Learning Vue.Js/Angular 
+       Developing .Net Core, Laravel Applications, Learning Vue.Js/Angular 
       </p>
       <hr class="hr">
       <div class="description">
@@ -38,7 +38,7 @@
         </p>
       </div>
       <div class="contact">
-        <a class="button" href="pujanisme@gmail.com">
+        <a class="button" href="mailto:pujanisme@gmail.com">
           Get in touch
         </a>
       </div>
@@ -56,6 +56,11 @@
         <li>
           <a href="https://facebook.com/pujan23">          
             <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/pujan-bajracharya">          
+            <i class="fab fa-linkedin"></i>
           </a>
         </li>
       </ul>
