--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <ul class="social">
         <li>
-          <a href="https://twitter.com/pujan23">
+          <a href="">
             <i class="fab fa-twitter"></i>
           </a>
         </li>
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li>
-          <a href="https://facebook.com/pujan23">          
+          <a href="">          
             <i class="fab fa-facebook"></i>
           </a>
         </li>
