--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
           Get in touch
         </a>
       </div>
+      <div class="contact">
+        <a class="button" href="layouts/index.html">
+          Open Portfolio
+        </a>
+      </div>
       <ul class="social">
         <li>
           <a href="">
