fixed urls, added instant.page

--- a/works/sns.html
+++ b/works/sns.html
@@ -14,14 +14,14 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../../static/css/style-cf.css" />
-    <link rel="stylesheet" type="text/css" href="../../static/css/styles.css" />
+    <link rel="stylesheet" href="../css/style-cf.css" />
+    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:800"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../static/css/highlight.css" />
+    <link rel="stylesheet" href="../css/highlight.css" />
 
     <link
       rel="stylesheet"
@@ -33,27 +33,24 @@
     <meta name="author" content="Pujan Bajracharya" />
     <meta name="theme-color" content="#000000" />
 
-    <meta itemprop="name" content="Swift Technology" />
+    <meta itemprop="name" content="Shades And Shadows" />
     <meta
       itemprop="description"
-      content="Developing Financial Applications using .Net Framework such as
-                IME PAY, AEON Wallet, Swift Wallet."
+      content="Designing and Developing Laravel Applications."
     />
 
-    <meta name="og:title" content="Swift Technology" />
+    <meta name="og:title" content="Shades And Shadows" />
     <meta
       name="og:description"
-      content="Developing Financial Applications using .Net Framework such as
-                IME PAY, AEON Wallet, Swift Wallet."
+      content="Designing and Developing Laravel Applications."
     />
     <meta name="og:type" content="article" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Swift Technology" />
+    <meta name="twitter:title" content="Shades And Shadows" />
     <meta
       name="twitter:description"
-      content="Developing Financial Applications using .Net Framework such as
-                IME PAY, AEON Wallet, Swift Wallet."
+      content="Designing and Developing Laravel Applications."
     />
 
     <meta name="article:author" content="Pujan Bajracharya" />
@@ -75,25 +72,25 @@
 
       <div class="secondaryMenu p-3 bg-white">
         <div class="">
-          <a href="../index.html#Blog">
+          <a href="../portfolio.html#Blog">
             <h4 class="d-inline-block mr-3 text-dark mb-0">Blog</h4>
           </a>
 
-          <a href="../index.html#Work">
+          <a href="../portfolio.html#Work">
             <h4 class="d-inline-block mr-3 text-dark mb-0">Work</h4>
           </a>
 
-          <a href="../index.html#Contact">
-            <h4 class="d-inline-block mr-3 text-dark mb-0">Contact</h4>
+          <a href="../portfolio.html#Contact">
+            <h4 class="d-inline-block mr-3 text-dark mb-0">contact</h4>
           </a>
         </div>
       </div>
 
       <span class="mr-auto primaryMenu active">
-        <a class="navbar-brand ml-auto" href="../index.html">
+        <a class="navbar-brand ml-auto" href="../portfolio.html">
           <img
             style="width:40px"
-            src="../../static/images/avatar.jpg"
+            src="../images/avatar.jpg"
             alt=""
             class="rounded-circle mr-2"
           />
@@ -128,18 +125,17 @@
       <div class="row no-gutters">
         <div class="col-12 col-lg-6">
           <img
-            src="../../static/images/work1.jpg"
+            src="../images/work1.jpg"
             class="mx-auto d-block"
             style="max-width:100%;width:800px"
             alt=""
           />
         </div>
         <div class="col-12 col-lg-6 px-4 mt-4 mt-sm-0">
-          <h1 class="">Swift Technology</h1>
+          <h1 class="">Shades and Shadows</h1>
           <article>
             <p>
-              Developing Financial Applications using .Net Framework such as IME
-              PAY, AEON Wallet, Swift Wallet.
+              Designing and Developing Laravel Applications.
             </p>
 
             <p></p>
@@ -157,16 +153,21 @@
     </div>
 
     <div class="text-center my-5">
-      <a class="text-dark" href="work.html">↽ Back</a>
+      <a class="text-dark" href="../work.html">↽ Back</a>
     </div>
 
     <footer class="text-center text-muted py-4">
       Copyright 2019
     </footer>
-    <script src="../../static/js/highlight.min.js"></script>
+    <script src="../js/highlight.min.js"></script>
     <script>
       hljs.initHighlightingOnLoad()
     </script>
+    <script
+      src="//instant.page/1.2.2"
+      type="module"
+      integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"
+    ></script>
   </body>
 
   <script
@@ -183,5 +184,5 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"
   ></script>
-  <script src="../../static/js/main.js"></script>
+  <script src="../js/main.js"></script>
 </html>
