--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>
-      Works | Pujan Bajracharya
+      Blogs | Pujan Bajracharya
     </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,14 +14,14 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../../static/css/style-cf.css" />
-    <link rel="stylesheet" type="text/css" href="../../static/css/styles.css" />
+    <link rel="stylesheet" href="css/style-cf.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:800"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../static/css/highlight.css" />
+    <link rel="stylesheet" href="css/highlight.css" />
 
     <link
       rel="stylesheet"
@@ -34,27 +34,27 @@
     <meta name="theme-color" content="#000000" />
 
     <link
-      href="../index.xml"
+      href="index.xml"
       rel="alternate"
       type="application/rss+xml"
       title="Pujan Bajracharya"
     />
     <link
-      href="../index.xml"
+      href="index.xml"
       rel="feed"
       type="application/rss+xml"
       title="Pujan Bajracharya"
     />
 
-    <meta itemprop="name" content="Works" />
+    <meta itemprop="name" content="Blogs" />
     <meta itemprop="description" content="" />
 
-    <meta name="og:title" content="Works" />
+    <meta name="og:title" content="Blogs" />
     <meta name="og:description" content="" />
     <meta name="og:type" content="article" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Works" />
+    <meta name="twitter:title" content="Blogs" />
     <meta name="twitter:description" content="" />
 
     <meta name="article:author" content="Pujan Bajracharya" />
@@ -76,25 +76,25 @@
 
       <div class="secondaryMenu p-3 bg-white">
         <div class="">
-          <a href="../index.html#Blog">
+          <a href="index.html#Blog">
             <h4 class="d-inline-block mr-3 text-dark mb-0">Blog</h4>
           </a>
 
-          <a href="../index.html#Work">
+          <a href="index.html#Work">
             <h4 class="d-inline-block mr-3 text-dark mb-0">Work</h4>
           </a>
 
-          <a href="../index.html#Contact">
+          <a href="index.html#Contact">
             <h4 class="d-inline-block mr-3 text-dark mb-0">Contact</h4>
           </a>
         </div>
       </div>
 
       <span class="mr-auto primaryMenu active">
-        <a class="navbar-brand ml-auto" href="../index.html">
+        <a class="navbar-brand ml-auto" href="index.html">
           <img
             style="width:40px"
-            src="../../static/images/avatar.jpg"
+            src="images/avatar.jpg"
             alt=""
             class="rounded-circle mr-2"
           />
@@ -115,106 +115,94 @@
           <i class="fab fa-github-alt"></i>
         </a>
 
-        <a
-          target="_blank"
-          class="nav-link text-dark"
-          href="https://instagram.com/uicardio"
-        >
+        <a target="_blank" class="nav-link text-dark" href="">
           <i class="fab fa-instagram"></i>
         </a>
 
-        <a
-          target="_blank"
-          class="nav-link text-dark"
-          href="https://twitter.com/uicardio"
-        >
+        <a target="_blank" class="nav-link text-dark" href="">
           <i class="fab fa-twitter"></i>
         </a>
       </div>
     </nav>
 
-    <section class="pt-5">
+    <section class="pt-5 pb-0">
       <div class="container">
-        <h1 class="text-center py-4">Work</h1>
+        <article class="mb-5">
+          <div class="row">
+            <div class="col-12 col-lg-4 col-sm-12 col-md-5">
+              <div
+                class="featuredImage rounded"
+                style="background-size:cover;background-position:center;background-image: url('images/image1.jpg'); height: 200px;background-color:#fbfbfb;"
+              ></div>
+            </div>
+            <div class="col-12 col-lg-8 col-sm-12 col-md-7">
+              <small class="text-muted">Sep 18, 2018</small>
+              <h2 class="heading mb-0">
+                <a class="text-dark" href="blogs/blog1.html"
+                  >My Second Blog Post</a
+                >
+              </h2>
+              <small class="text-muted" style="text-transform:uppercase">
+                <span>
+                  <span class="badge badge-light">News</span>
 
-        <div class="row">
-          <div class="col-lg-4 col-md-4 col-12 mb-3">
-            <div class="card">
-              <a class="mb-3" href="work-experience1.html">
-                <div
-                  class="featuredImage rounded"
-                  style="background-size:cover;background-position:center;background-image: url('../../static/images/work1.jpg'); height: 180px;background-color:#fbfbfb;"
-                ></div>
-              </a>
+                  <span class="badge badge-light">Japan</span>
+                </span>
+              </small>
 
-              <a href="work-experience2.html">
-                <h3 class="h4 font-weight-bold text-dark">
-                  Shades and Shadows
-                </h3>
-              </a>
-
-              <div>
-                <div class="float-right"></div>
-              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent suscipit lectus quis lorem rutrum varius. Praesent leo
+                ex, pellentesque quis ornare nec, egestas vitae dui.
+                <a class="text-muted d-inline" href="blogs/blog1.html"
+                  >Read More...</a
+                >
+              </p>
             </div>
           </div>
+        </article>
 
-          <div class="col-lg-4 col-md-4 col-12 mb-3">
-            <div class="card">
-              <a class="mb-3" href="work-experience2.html">
-                <div
-                  class="featuredImage rounded"
-                  style="background-size:cover;background-position:center;background-image: url('../../static/images/work2.jpg'); height: 180px;background-color:#fbfbfb;"
-                ></div>
-              </a>
+        <article class="mb-5">
+          <div class="row">
+            <div class="col-12 col-lg-4 col-sm-12 col-md-5">
+              <div
+                class="featuredImage rounded"
+                style="background-size:cover;background-position:center;background-image: url('images/image2.jpg'); height: 200px;background-color:#fbfbfb;"
+              ></div>
+            </div>
+            <div class="col-12 col-lg-8 col-sm-12 col-md-7">
+              <small class="text-muted">Sep 17, 2018</small>
+              <h2 class="heading mb-0">
+                <a class="text-dark" href="blogs/blog2.html">This Is a Blog</a>
+              </h2>
+              <small class="text-muted" style="text-transform:uppercase">
+              </small>
 
-              <a href="work-experience2.html">
-                <h3 class="h4 font-weight-bold text-dark">
-                  Swift Technology
-                </h3>
-              </a>
-
-              <div>
-                <div class="float-right"></div>
-              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent suscipit lectus quis lorem rutrum varius. Praesent leo
+                ex, pellentesque quis ornare nec, egestas vitae dui.
+                <a class="text-muted d-inline" href="blogs/blog2.html"
+                  >Read More...</a
+                >
+              </p>
             </div>
           </div>
-
-          <!-- <div class="col-lg-4 col-md-4 col-12 mb-3">
-            <div class="card">
-              <a
-                class="mb-3"
-                href="https://demo.uicard.io/hugo-uilite-portfolio-demo/work/work-experience1/"
-              >
-                <div
-                  class="featuredImage rounded"
-                  style="background-size:cover;background-position:center;background-image: url('https://demo.uicard.io/hugo-uilite-portfolio-demo/images/work/work1.jpg'); height: 180px;background-color:#fbfbfb;"
-                ></div>
-              </a>
-
-              <a
-                href="https://demo.uicard.io/hugo-uilite-portfolio-demo/work/work-experience1/"
-                ><h3 class="h4 font-weight-bold text-dark">
-                  Work Experience1
-                </h3></a
-              >
-
-              <div>
-                <div class="float-right"></div>
-              </div>
-            </div>
-          </div> -->
-        </div>
+        </article>
       </div>
     </section>
-
     <footer class="text-center text-muted py-4">
       Copyright 2019
     </footer>
-    <script src="../../static/js/highlight.min.js"></script>
+    <script src="js/highlight.min.js"></script>
     <script>
       hljs.initHighlightingOnLoad()
     </script>
+    <script
+      src="//instant.page/1.2.2"
+      type="module"
+      integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"
+    ></script>
   </body>
 
   <script
@@ -231,5 +219,5 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"
   ></script>
-  <script src="../../static/js/main.js"></script>
+  <script src="js/main.js"></script>
 </html>
