--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       
       <div class="contact">
-       <a href="mailto:pujanisme@gmail.com" class="fancy-button bg-gradient2"><span><i class="fa fa-envelope"></i>Messages</span></a>
+       <a href="mailto:pujanisme@gmail.com" class="fancy-button bg-gradient2"><span><i class="fa fa-envelope"></i>Contact Me</span></a>
       </div> 
       
       <div class="contact"> <a href="portfolio.html" class="fancy-button bg-gradient1"><span><i class="fa fa-hand-point-right"></i>Portfolio</span></a></div>
