--- a/works/swift.html
+++ b/works/swift.html
@@ -1,192 +1,144 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>
-      Work Experience | Pujan Bajracharya
-    </title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+<head>
+  <title>
+    Work Experience | Pujan Bajracharya
+  </title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png" />
+  <link rel="manifest" href="../images/site.webmanifest" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="../css/style-cf.css" />
-    <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+  <link rel="stylesheet" href="../css/style-cf.css" />
+  <link rel="stylesheet" type="text/css" href="../css/styles.css" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:800"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/highlight.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/highlight.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-      crossorigin="anonymous"
-    />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
 
-    <meta name="author" content="Pujan Bajracharya" />
-    <meta name="theme-color" content="#000000" />
+  <meta name="author" content="Pujan Bajracharya" />
+  <meta name="theme-color" content="#000000" />
 
-    <meta itemprop="name" content="Swift Technology" />
-    <meta
-      itemprop="description"
-      content="Developing Financial Applications using .Net Framework such as
-                IME PAY, AEON Wallet, Swift Wallet."
-    />
+  <meta itemprop="name" content="Swift Technology" />
+  <meta itemprop="description" content="Developing Financial Applications using .Net Framework such as
+                IME PAY, AEON Wallet, Swift Wallet." />
 
-    <meta name="og:title" content="Swift Technology" />
-    <meta
-      name="og:description"
-      content="Developing Financial Applications using .Net Framework such as
-                IME PAY, AEON Wallet, Swift Wallet."
-    />
-    <meta name="og:type" content="article" />
+  <meta name="og:title" content="Swift Technology" />
+  <meta name="og:description" content="Developing Financial Applications using .Net Framework such as
+                IME PAY, AEON Wallet, Swift Wallet." />
+  <meta name="og:type" content="article" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Swift Technology" />
-    <meta
-      name="twitter:description"
-      content="Developing Financial Applications using .Net Framework such as
-                IME PAY, AEON Wallet, Swift Wallet."
-    />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Swift Technology" />
+  <meta name="twitter:description" content="Developing Financial Applications using .Net Framework such as
+                IME PAY, AEON Wallet, Swift Wallet." />
 
-    <meta name="article:author" content="Pujan Bajracharya" />
-  </head>
+  <meta name="article:author" content="Pujan Bajracharya" />
+</head>
 
-  <body class="clearfix">
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-white mt-lg-0 mt-3"
-      style="position:relative"
-    >
-      <a
-        id="menuBar"
-        href="#0"
-        class="bg-white"
-        style="cursor: pointer; position: absolute; height: 22px; width: 30px;"
-      >
-        <div class="hamburger-menu"></div>
+<body class="clearfix">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white mt-lg-0 mt-3" style="position:relative">
+    <a id="menuBar" href="#0" class="bg-white" style="cursor: pointer; position: absolute; height: 22px; width: 30px;">
+      <div class="hamburger-menu"></div>
+    </a>
+
+    <div class="secondaryMenu p-3 bg-white">
+      <div class="">
+        <a href="../portfolio.html#Blog">
+          <h4 class="d-inline-block mr-3 text-dark mb-0">Blog</h4>
+        </a>
+
+        <a href="../portfolio.html#Work">
+          <h4 class="d-inline-block mr-3 text-dark mb-0">Work</h4>
+        </a>
+
+        <a href="../portfolio.html#Contact">
+          <h4 class="d-inline-block mr-3 text-dark mb-0">contact</h4>
+        </a>
+      </div>
+    </div>
+
+    <span class="mr-auto primaryMenu active">
+      <a class="navbar-brand ml-auto" href="../portfolio.html">
+        <img style="width:40px" src="../images/avatar.jpg" alt="" class="rounded-circle mr-2" />
+        <span style="font-size: 20px" class="heading">Pujan Bajracharya</span>
+      </a>
+    </span>
+    <div class="collapse navbar-collapse float-right" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto"></ul>
+
+      <a target="_blank" class="nav-link text-dark" href="">
+        <i class="fab fa-dribbble"></i>
       </a>
 
-      <div class="secondaryMenu p-3 bg-white">
-        <div class="">
-          <a href="../portfolio.html#Blog">
-            <h4 class="d-inline-block mr-3 text-dark mb-0">Blog</h4>
-          </a>
+      <a target="_blank" class="nav-link text-dark" href="">
+        <i class="fab fa-github-alt"></i>
+      </a>
 
-          <a href="../portfolio.html#Work">
-            <h4 class="d-inline-block mr-3 text-dark mb-0">Work</h4>
-          </a>
+      <a target="_blank" class="nav-link text-dark" href="">
+        <i class="fab fa-instagram"></i>
+      </a>
 
-          <a href="../portfolio.html#Contact">
-            <h4 class="d-inline-block mr-3 text-dark mb-0">contact</h4>
-          </a>
-        </div>
+      <a target="_blank" class="nav-link text-dark" href="">
+        <i class="fab fa-twitter"></i>
+      </a>
+    </div>
+  </nav>
+
+  <div class="mt-4">
+    <div class="row no-gutters">
+      <div class="col-12 col-lg-6">
+        <img src="../images/work1.jpg" class="mx-auto d-block" style="max-width:100%;width:800px" alt="" />
       </div>
+      <div class="col-12 col-lg-6 px-4 mt-4 mt-sm-0">
+        <h1 class="">Swift Technology</h1>
+        <article>
+          <p>
+            Developing Financial Applications such as IME PAY, AEON Wallet,
+            Swift Wallet using .Net Framework.
+          </p>
 
-      <span class="mr-auto primaryMenu active">
-        <a class="navbar-brand ml-auto" href="../portfolio.html">
-          <img
-            style="width:40px"
-            src="../images/avatar.jpg"
-            alt=""
-            class="rounded-circle mr-2"
-          />
-          <span style="font-size: 20px" class="heading">Pujan Bajracharya</span>
-        </a>
-      </span>
-      <div
-        class="collapse navbar-collapse float-right"
-        id="navbarSupportedContent"
-      >
-        <ul class="navbar-nav mr-auto"></ul>
-
-        <a target="_blank" class="nav-link text-dark" href="">
-          <i class="fab fa-dribbble"></i>
-        </a>
-
-        <a target="_blank" class="nav-link text-dark" href="">
-          <i class="fab fa-github-alt"></i>
-        </a>
-
-        <a target="_blank" class="nav-link text-dark" href="">
-          <i class="fab fa-instagram"></i>
-        </a>
-
-        <a target="_blank" class="nav-link text-dark" href="">
-          <i class="fab fa-twitter"></i>
-        </a>
-      </div>
-    </nav>
-
-    <div class="mt-4">
-      <div class="row no-gutters">
-        <div class="col-12 col-lg-6">
-          <img
-            src="../images/work1.jpg"
-            class="mx-auto d-block"
-            style="max-width:100%;width:800px"
-            alt=""
-          />
-        </div>
-        <div class="col-12 col-lg-6 px-4 mt-4 mt-sm-0">
-          <h1 class="">Swift Technology</h1>
-          <article>
-            <p>
-              Developing Financial Applications such as IME PAY, AEON Wallet,
-              Swift Wallet using .Net Framework.
-            </p>
-
-            <p></p>
-          </article>
-          <div class="text-center my-5">
-            <a target="_blank" href="" class="h5 mr-4">
-              <i class="socicon-facebook"></i> Share
-            </a>
-            <a target="_blank" href="" class="h5">
-              <i class="socicon-twitter"></i> Tweet
-            </a>
-          </div>
+          <p></p>
+        </article>
+        <div class="text-center my-5">
+          <a target="_blank" href="" class="h5 mr-4">
+            <i class="socicon-facebook"></i> Share
+          </a>
+          <a target="_blank" href="" class="h5">
+            <i class="socicon-twitter"></i> Tweet
+          </a>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="text-center my-5">
-      <a class="text-dark" href="../work.html">↽ Back</a>
-    </div>
+  <div class="text-center my-5">
+    <a class="text-dark" href="../work.html">↽ Back</a>
+  </div>
 
-    <footer class="text-center text-muted py-4">
-      Copyright 2019
-    </footer>
-    <script src="../js/highlight.min.js"></script>
-    <script>
-      hljs.initHighlightingOnLoad()
-    </script>
-    <script
-      src="//instant.page/1.2.2"
-      type="module"
-      integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"
-    ></script>
-  </body>
+  <footer class="text-center text-muted py-4">
+    Copyright 2019
+  </footer>
+  <script src="../js/highlight.min.js"></script>
+  <script>
+    hljs.initHighlightingOnLoad()
+  </script>
+  <script src="//instant.page/1.2.2" type="module"
+    integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"></script>
+</body>
 
-  <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"
-  ></script>
-  <script src="../js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="../js/main.js"></script>
+
 </html>
