--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -7,7 +7,10 @@
   </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png" />
+  <link rel="manifest" href="../images/site.webmanifest" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -49,19 +52,19 @@
     </a>
 
     <div class="secondaryMenu p-3 bg-white">
-       <div class="">
-          <a href="../portfolio.html#Blog">
-            <h4 class="d-inline-block mr-3 text-dark mb-0">Blog</h4>
-          </a>
+      <div class="">
+        <a href="../portfolio.html#Blog">
+          <h4 class="d-inline-block mr-3 text-dark mb-0">Blog</h4>
+        </a>
 
-          <a href="../portfolio.html#Work">
-            <h4 class="d-inline-block mr-3 text-dark mb-0">Work</h4>
-          </a>
+        <a href="../portfolio.html#Work">
+          <h4 class="d-inline-block mr-3 text-dark mb-0">Work</h4>
+        </a>
 
-          <a href="../portfolio.html#Contact">
-            <h4 class="d-inline-block mr-3 text-dark mb-0">contact</h4>
-          </a>
-        </div>
+        <a href="../portfolio.html#Contact">
+          <h4 class="d-inline-block mr-3 text-dark mb-0">contact</h4>
+        </a>
+      </div>
     </div>
 
     <span class="mr-auto primaryMenu active">
@@ -147,26 +150,27 @@
       </div>
     </div>
 
-   <script>
+    <script>
+      /**
+       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function () { // DON'T EDIT BELOW THIS LINE
+        var d = document,
+          s = d.createElement('script');
+        s.src = 'https://clarkcasctiv.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+        Disqus.</a></noscript>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://clarkcasctiv.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
     </div>
 
 
@@ -179,8 +183,9 @@ s.setAttribute('data-timestamp', +new Date());
   <script>
     hljs.initHighlightingOnLoad()
   </script>
-<script src="//instant.page/1.2.2" type="module" integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"></script>
-<script id="dsq-count-scr" src="//clarkcasctiv.disqus.com/count.js" async></script>
+  <script src="//instant.page/1.2.2" type="module"
+    integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"></script>
+  <script id="dsq-count-scr" src="//clarkcasctiv.disqus.com/count.js" async></script>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
