--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -141,7 +141,9 @@
         <i class="socicon-twitter"></i> Tweet
       </a>
     </div>
-
+   <div class="text-center my-5">
+      <a class="text-dark" href="../blog.html">↽ Back</a>
+    </div>
 
 
     <div class="row justify-content-md-center">
@@ -176,8 +178,15 @@
   </article>
 
   <footer class="text-center text-muted py-4">
-    Copyright 2019
-  </footer>
+      Copyright &copy;
+      <span id="currentYear"></span>
+      Created with <img src="../images/heart.png" alt="love" /> by
+      <a href="https://twitter.com">Pujan Bajracharya</a>
+    </footer>
+    <script>
+      var year = new Date().getFullYear()
+      document.getElementById('currentYear').innerHTML = year
+    </script>
   <script src="../js/highlight.min.js"></script>
   <script>
     hljs.initHighlightingOnLoad()
