--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       </div>
 
       <div class="contact">
-        <a href="mailto:pujanisme@gmail.com" class="fancy-button bg-gradient2"><span><i
-              class="fa fa-envelope"></i>Contact Me</span></a>
+        <a href="https://drive.google.com/open?id=1bmuIVMlbYjRaHnF7ibT-dpaggNVQATok" class="fancy-button bg-gradient2"><span><i
+              class="fa fa-envelope"></i>Resume</span></a>
       </div>
 
       <div class="contact"> <a href="portfolio.html" class="fancy-button bg-gradient1"><span><i
