--- a/work.html
+++ b/work.html
@@ -236,6 +236,17 @@
       type="module"
       integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"
     ></script>
+    <script>
+	(function() {
+		window.counter = 'https://clarkcasctiv.goatcounter.com/count'
+
+		var script = document.createElement('script');
+		script.async = 1;
+		script.src = '//gc.zgo.at/count.js';
+		var ins = document.getElementsByTagName('script')[0];
+		ins.parentNode.insertBefore(script, ins)
+	})();
+</script>
   </body>
 
   <script
