--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         Hi, I'm Pujan Ratna Bajracharya
       </h1>
       <p class="job">
-        .Net Core, Laravel Applications, Vue.Js, Angular 2+
+        C#,.Net Webform, SQL Server, APIs, Laravel
       </p>
       <hr class="hr">
       <div class="description">
         <p>
-          I am a Dot Net Developer working for Swift Technology.
+          I am a Dot Net Developer with 4+ years of experience working for Swift Technology.
         </p>
       </div>
 
       <div class="contact">
-        <a href="https://drive.google.com/open?id=1bmuIVMlbYjRaHnF7ibT-dpaggNVQATok" class="fancy-button bg-gradient2"><span><i
+        <a href="resume/Resume.pdf" class="fancy-button bg-gradient2"><span><i
               class="fa fa-envelope"></i>Resume</span></a>
       </div>
 
@@ -52,21 +52,21 @@
               class="fa fa-hand-point-right"></i>Portfolio</span></a></div>
 
       <ul class="social">
-        <li>
+        <!-- <li>
           <a href="https://facebook.com/">
             <i class="fab fa-twitter"></i>
           </a>
-        </li>
+        </li> -->
         <li>
           <a href="https://github.com/clarkcasctiv">
             <i class="fab fa-github"></i>
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="https://twitter.com">
             <i class="fab fa-facebook"></i>
           </a>
-        </li>
+        </li> -->
         <li>
           <a href="https://www.linkedin.com/in/pujan-bajracharya">
             <i class="fab fa-linkedin"></i>
