--- a/portfolio.html
+++ b/portfolio.html
@@ -109,21 +109,25 @@
         </p>
 
         <div class="social my-4">
-          <a target="_blank" href="">
+          <!-- <a target="_blank" href="">
             <i class="fab fa-dribbble"></i>
-          </a>
+          </a> -->
 
-          <a target="_blank" href="">
+          <a target="_blank" href="https://github.com/clarkcasctiv">
             <i class="fab fa-github-alt"></i>
           </a>
 
-          <a target="_blank" href="">
+          <a target="_blank" href="https://www.linkedin.com/in/pujan-bajracharya">
+            <i class="fab fa-linkedin"></i>
+          </a>
+
+          <!-- <a target="_blank" href="">
             <i class="fab fa-instagram"></i>
           </a>
 
           <a target="_blank" href="">
             <i class="fab fa-twitter"></i>
-          </a>
+          </a> -->
         </div>
 
         <a href="#Contact" class="btn btn-dark btn-lg">Contact</a>
@@ -143,7 +147,7 @@
             <div
               class="progress-bar bg-blue"
               role="progressbar"
-              style="width: 75%"
+              style="width: 80%"
               aria-valuenow="10"
               aria-valuemin="0"
               aria-valuemax="100"
@@ -152,7 +156,21 @@
         </div>
 
         <div class="skill">
-          <span class="h6">Laravel/Php</span>
+          <span class="h6">SQL Server</span>
+          <div class="progress">
+            <div
+              class="progress-bar bg-blue"
+              role="progressbar"
+              style="width: 70%"
+              aria-valuenow="10"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+        </div>
+
+        <div class="skill">
+          <span class="h6">Javascript</span>
           <div class="progress">
             <div
               class="progress-bar bg-blue"
@@ -166,26 +184,12 @@
         </div>
 
         <div class="skill">
-          <span class="h6">Angular</span>
+          <span class="h6">HTML5/CSS3</span>
           <div class="progress">
             <div
               class="progress-bar bg-blue"
               role="progressbar"
-              style="width: 60%"
-              aria-valuenow="10"
-              aria-valuemin="0"
-              aria-valuemax="100"
-            ></div>
-          </div>
-        </div>
-
-        <div class="skill">
-          <span class="h6">Vue Js</span>
-          <div class="progress">
-            <div
-              class="progress-bar bg-blue"
-              role="progressbar"
-              style="width: 50%"
+              style="width: 80%"
               aria-valuenow="10"
               aria-valuemin="0"
               aria-valuemax="100"
@@ -204,7 +208,7 @@
               <span class="date">2017-2017</span>
               <h6 class="h3 my-2">Shades And Shadows Pvt. Ltd</h6>
               <p class="">
-                Designing and Developing Laravel Applications.
+                Designing and Developing Web Applications using Laravel, PHP, HTML and CSS
               </p>
             </div>
           </div>
@@ -216,9 +220,7 @@
               <span class="date">2018-present</span>
               <h6 class="h3 my-2">Swift Technology Pvt. Ltd</h6>
               <p class="">
-                Developing Financial Applications such as IME PAY, AEON Wallet,
-                Swift Wallet using .Net Framework.
-              </p>
+                Developing Fintech Applications used by IME Remit, IME Pay, GME Remittance using .NET Framework and C#
             </div>
           </div>
         </div>
@@ -233,8 +235,7 @@
               <i class="mt-3  fa fa-code fa-3x"></i>
               <h5 class="mt-4">Web Development</h5>
               <p class="text-muted">
-                Duis ornare lacus lectus, ut sollicitudin lacus sodales at. Cras
-                a orci non orci interdum ullamcorper.
+                Developing responsive and user-friendly websites with the help of Laravel and HTML5/CSS3.
               </p>
             </div>
           </div>
@@ -244,8 +245,7 @@
               <i class="mt-3  fa fa-pen-nib fa-3x"></i>
               <h5 class="mt-4">Application Development</h5>
               <p class="text-muted">
-                Duis ornare lacus lectus, ut sollicitudin lacus sodales at. Cras
-                a orci non orci interdum ullamcorper.
+                working with ASP.NET And C# to develop and maintain fintech software .
               </p>
             </div>
           </div>
@@ -254,7 +254,7 @@
     </div>
 
     <div style="z-index: 4; position: relative;">
-      <section class="skin">
+      <!-- <section class="skin">
         <h2 class="heading" id="Blog">
           Blog
         </h2>
@@ -317,9 +317,9 @@
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="blue">
+      <!-- <section class="blue">
         <h2 class="heading" id="Work">Work</h2>
 
         <div class="row">
@@ -363,7 +363,7 @@
                 <div class="float-right"></div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="col-lg-4 col-md-4 col-12 mb-3">
             <div class="card p-4">
@@ -389,13 +389,13 @@
               </div>
             </div>
           </div> -->
-        </div>
+        <!-- </div>
 
         <div class="text-center mt-5">
           <a href="work.html" class="btn btn-lg btn-dark-faded ">Browse All</a>
         </div>
       </section>
-    </div>
+    </div> -->
 
     <div class="main-content">
       <section
